# todo_app

./: .gitignore  DESIGN.md  FIX_DESIGN.md  README.md  TechSpec.md  main.py  pyproject.toml  start.bat
data/: settings.json  todo.db
src/: __init__.py
src/application/: task_service.py
src/config/: logging_config.py  settings.py
src/domain/: task_entity.py
src/infrastructure/db/: database.py  models.py
src/infrastructure/repositories/: abstract_repository.py  sqlalchemy_repository.py
src/presentation/: styles.py
src/presentation/views/: active_tasks_view.py  completed_tasks_view.py  main_window.py  today_tasks_view.py
src/presentation/widgets/: create_task_dialog.py  date_group_widget.py  edit_task_dialog.py  lofi_player.py  task_item_widget.py
src/presentation/workers/: db_worker.py
src/settings/: __init__.py  settings_dialog.py  settings_manager.py
tests/: test_repository.py  test_task_entity.py  test_task_service.py
